# django-mongodb

./: .pre-commit-config.yaml  .readthedocs.yaml  DEV_NOTES.md  README.md  THIRD-PARTY-NOTICES  pyproject.toml  requirements.txt  sbom.json
.evergreen/: config.yml  run-tests.sh  setup.sh
.github/scripts/: bump-version.sh
.github/workflows/: codeql.yml  dist.yml  linters.yml  mongodb_settings.py  release-python.yml  runtests.py  test-python.yml  test-python1.yml
app_template/: apps.py-tpl
django_mongodb/: __init__.py  _version.py  aggregates.py  base.py  client.py  compiler.py  creation.py  datastructures.py  dbapi.py  expressions.py  features.py  fields.py  forms.py  functions.py  indexes.py  introspection.py  lookups.py  manager.py  managers.py  operations.py  query.py  query_utils.py  schema.py  utils.py  validation.py
django_mongodb/fields/: __init__.py  array.py  auto.py  embedded_model.py  objectid.py
django_mongodb/forms/: __init__.py  array.py  fields.py
django_mongodb_backend/: __init__.py  base.py  cache.py  client.py  compiler.py  creation.py  expressions.py  features.py  functions.py  indexes.py  introspection.py  lookups.py  managers.py  models.py  operations.py  query.py  query_utils.py  queryset.py  routers.py  schema.py  utils.py  validation.py  validators.py
django_mongodb_backend/fields/: __init__.py  array.py  auto.py  duration.py  embedded_model.py  json.py  objectid.py
django_mongodb_backend/forms/: __init__.py
django_mongodb_backend/forms/fields/: __init__.py  array.py  embedded_model.py
django_mongodb_backend/management/commands/: createcachecollection.py
docs/: Makefile  make.bat
docs/source/: conf.py  contents.rst  databases.rst  embedded-models.rst  faq.rst  fields.rst  forms.rst  index.rst  internals.rst  models.rst  querysets.rst
docs/source/_ext/: djangodocs.py
docs/source/_static/: custom.css
docs/source/howto/: contrib-apps.rst  index.rst
docs/source/intro/: configure.rst  index.rst  install.rst
docs/source/ref/: django-admin.rst  index.rst  utils.rst
docs/source/ref/models/: fields.rst  index.rst  models.rst  querysets.rst
docs/source/releases/: 5.0.x.rst  5.1.x.rst  index.rst
docs/source/topics/: cache.rst  index.rst  known-issues.rst
project_template/project_name/: apps.py-tpl  settings.py-tpl
test/: test_basic.py
tests/backend_/: test_base.py
tests/backend_/utils/: test_parse_uri.py
tests/cache_/: tests.py
tests/dbshell_/: tests.py
tests/expressions_/: test_value.py
tests/forms_tests_/: test_array.py  test_objectidfield.py
tests/indexes_/: models.py  test_atlas_indexes.py  test_condition.py
tests/invalid_models_tests_/: test_autofield.py
tests/lookup_/: models.py  tests.py
tests/model_fields_/: models.py  test_arrayfield.py  test_autofield.py  test_embedded_model.py  test_objectidfield.py  utils.py
tests/model_fields_/array_default_migrations/: 0001_initial.py  0002_integerarraymodel_field_2.py
tests/model_fields_/array_index_migrations/: 0001_initial.py
tests/model_forms_/: forms.py  models.py  test_embedded_model.py
tests/models_/: models.py  test_embedded_model.py  test_routers.py
tests/mongo_fields/: models.py  test_embedded_model.py  test_listfield.py
tests/queries_/: models.py  test_mql.py  test_objectid.py
tests/raw_query_/: models.py  test_raw_aggregate.py
tests/rest_framework_/: test_filters.py
tests/schema_/: models.py  test_embedded_model.py
tests/utils_/: test_parse.py  test_parse_uri.py
